--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": ""
   },
   "dependencies": {
+    "babel-runtime": "^5.8.0",
     "vue": "^1.0.18",
-    "babel-runtime": "^5.8.0"
+    "vue-router": "^0.7.13"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
